--- a/style.css
+++ b/style.css
@@ -2,6 +2,17 @@ body {
 	background-color: grey;
 }
 .card-placeholder {
-	height: 1.5em;
 	background: green;
+}
+.board {
+	width: 1500px;
+	background-color: green;
+	text-align: center;
+}
+.column {
+	background: yellow;
+}
+.create-column {
+	height: 35px;
+	background-color: red;
 }
