--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #b2bec3
+	background-color: #b2bec3;
 }
 h1 {
 	background-color: #4fc4f2;
@@ -46,4 +46,7 @@ h2 {
 	border-radius: 25px;
 	margin: 5px;
 	padding: 5px;
+}
+ul {
+	min-height: 15px;
 }
